js/js.translator/testData/incremental/invalidation/jsSymbol/lib1/lib.1.kt
interface Foo {
    fun foo(hint: String = "X"): String
    fun default(s: String = "def"): String = "Default"
}

open class Bar {
    open fun bar(): String = "Bar"
}
